fixed h1 size on mobile

--- a/src/Components/pages/Aboutme.css
+++ b/src/Components/pages/Aboutme.css
@@ -49,6 +49,12 @@
     text-align: center;
 }
 
+@media only screen and (max-width: 1366px) {
+    .about-me {
+        background-attachment: scroll;
+    }
+}
+
 @media screen and (max-width: 1020px) {
     .about-me-content {
         flex-direction: column;
@@ -64,5 +70,17 @@
         font-size: 15px;
         margin-left: -100px;
         margin-right: -100px;
+    }
+}
+
+@media screen and (max-width: 960px) {
+    .about-me > h1 {
+        font-size: 70px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .about-me > h1 {
+        font-size: 50px;
     }
 }
