--- a/src/Components/pages/Projects.css
+++ b/src/Components/pages/Projects.css
@@ -7,3 +7,21 @@
     color: #fff;
     font-size: 100px;
 }
+
+@media only screen and (max-width: 1366px) {
+    .projects {
+        background-attachment: scroll;
+    }
+}
+
+@media screen and (max-width: 960px) {
+    .projects {
+        font-size: 70px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .projects {
+        font-size: 50px;
+    }
+}
