--- a/src/Components/pages/Resume.css
+++ b/src/Components/pages/Resume.css
@@ -15,3 +15,21 @@
 .resume-header {
     font-size: 100px;
 }
+
+@media only screen and (max-width: 1366px) {
+    .resume {
+        background-attachment: scroll;
+    }
+}
+
+@media screen and (max-width: 960px) {
+    .resume > h1 {
+        font-size: 70px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .resume > h1 {
+        font-size: 50px;
+    }
+}
